tests/ui/formatter/fail/duplicate_fmt.stderr
error: duplicate `fmt` handler specified
 --> tests/ui/formatter/fail/duplicate_fmt.rs:8:42
  |
8 | #[error(fmt = crate::format_error, fmt = crate::format_error)]
  |                                          ^^^^^
